version/0.16/_sources/api/solver/_autosummary/settings/pb_disc_components.rst.txt
:orphan:

.. _pb_disc_components:

pb_disc_components
==================

.. autoclass:: ansys.fluent.core.solver.settings_232.pb_disc_components.pb_disc_components
    :show-inheritance:

.. rubric:: Methods

==========================================   ==============================

Method                                                              Summary

==========================================   ==============================
:ref:`list_properties <list_properties_1>`       'list_properties' command.

==========================================   ==============================

.. rubric:: Named object type

:ref:`child_object_type_child <child_object_type_child_1>`


.. rubric:: Included in:

==========================   ====================

Parent                                    Summary

==========================   ====================
:ref:`pb_disc <pb_disc_1>`       'pb_disc' child.

==========================   ====================

