version/0.22/_sources/api/solver/_autosummary/settings/pb_disc_components.rst.txt
:orphan:

.. _pb_disc_components:

pb_disc_components
==================

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.pb_disc_components.pb_disc_components
    :show-inheritance:

.. rubric:: Methods

========================================   ==========================================

Method                                                                        Summary

========================================   ==========================================
:ref:`list_properties <list_properties>`          List properties of selected object.

:ref:`resize <resize>`                         Set number of objects for list-object.

========================================   ==========================================

.. rubric:: Named object type

:ref:`contact_angles_child <contact_angles_child>`


.. rubric:: Included in:

========================   =======================

Parent                                     Summary

========================   =======================
:ref:`pb_disc <pb_disc>`       Help not available.

========================   =======================

